--- a/changelog
+++ b/changelog
@@ -7,7 +7,7 @@ turnkey-fileserver-12.1 (1) turnkey; urgency=low
     - Added USER_BASE_DRIVER to plugins multi-auth (required in new version).
     - Force SSL and set locale to en_US.UTF-8.
 
-  * Hardcoded component versions:
+  * Upstream source component versions:
 
     ajaxplorer      4.2.3
 
