--- a/changelog
+++ b/changelog
@@ -1,3 +1,13 @@
+turnkey-fileserver-13.0 (1) turnkey; urgency=low
+
+  * Please refer to turnkey-core's changelog for changes common to all
+    appliances, as well as the following git logs:
+    
+    - https://github.com/turnkeylinux/common
+    - https://github.com/turnkeylinux-apps/fileserver
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Tue, 06 Aug 2013 15:37:33 +0300
+
 turnkey-fileserver-12.1 (1) turnkey; urgency=low
 
   * AjaXplorer related:
