updated changelog for 13.0 release

--- a/changelog
+++ b/changelog
@@ -1,12 +1,11 @@
 turnkey-fileserver-13.0 (1) turnkey; urgency=low
 
-  * Please refer to turnkey-core's changelog for changes common to all
-    appliances, as well as the following git logs:
-    
-    - https://github.com/turnkeylinux/common
-    - https://github.com/turnkeylinux-apps/fileserver
+  * Latest Debian Wheezy package version of Samba.
 
- -- Alon Swartz <alon@turnkeylinux.org>  Tue, 06 Aug 2013 15:37:33 +0300
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Alon Swartz <alon@turnkeylinux.org>  Thu, 10 Oct 2013 17:53:24 +0300
 
 turnkey-fileserver-12.1 (1) turnkey; urgency=low
 
