--- a/changelog
+++ b/changelog
@@ -1,3 +1,12 @@
+turnkey-fileserver-14.1 (1) turnkey; urgency=low
+
+  * Admin Samba account now works reliably with sudoadmin (#523).
+
+  * Note: Please refer to turnkey-core's changelog for changes common to all
+    appliances. Here we only describe changes specific to this appliance.
+
+ -- Jeremy Davis <jeremy@turnkeylinux.org>  Thu, 18 Feb 2016 14:44:25 +1100
+
 turnkey-fileserver-14.0 (1) turnkey; urgency=low
 
   * Latest Debian Jessie package version of Samba.
