fix readme and tweak changelog

--- a/changelog
+++ b/changelog
@@ -1,13 +1,11 @@
 turnkey-fileserver-15.0 (1) turnkey; urgency=low
 
-  * Install Adminer directly from stretch/main repo
-
-  * Replace MySQL with MariaDB
+  * Update WebDAV CGI from upstream.
 
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specdific to this appliance.
 
- -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Fri, 24 Feb 2018 04:36:42 +0200
+ -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Tue, 19 Jun 2018 04:36:42 +0200
 
 turnkey-fileserver-14.2 (1) turnkey; urgency=low
 
