--- a/changelog
+++ b/changelog
@@ -9,7 +9,7 @@ turnkey-fileserver-15.0 (1) turnkey; urgency=low
   * Note: Please refer to turnkey-core's changelog for changes common to all
     appliances. Here we only describe changes specific to this appliance.
 
- -- Vlad Kuzmenko <vlad.work.here@gmail.com>  Tue, 28 Aug 2018 04:36:42 +0200
+ -- Vlad Kuzmenko <vlad@turnkeylinux.org>  Tue, 28 Aug 2018 04:36:42 +0200
 
 turnkey-fileserver-14.2 (1) turnkey; urgency=low
 
